# articated

./: .clang-format  .clang_complete  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml  codeql-analysis.yml  default.yml
cmake/: GitSemver.cmake  StringToSemver.cmake  articated_android.cmake  articated_app.cmake  augmentation_widget.cmake  movement3d.cmake  movement3d_filter.cmake  operators.cmake  vision.cmake
debug_samples/: 3_markers_good.webm  debug_samples.qrc
docs/: building-android.md
include/: acquisition.hpp  algorithm_original.hpp  algorithm_random.hpp  augmentation_widget.hpp  model_loader.hpp  movement3d.hpp  movement3d_filter.hpp  operators.hpp  vision.hpp  vision_algorithm.hpp  window.h  window.hpp
resources/3D_models/: 3D_models.qrc
resources/GL_shaders/: GL_shaders.qrc  background_fs.glsl  background_vs.glsl  basic_fs.glsl  basic_vs.glsl  object_fs.glsl  object_vs.glsl  vision_cs.glsl
resources/debug_samples/: debug_samples.qrc
source/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
source/augmentation_widget/: CMakeLists.txt  augmentation_renderer.cpp  augmentation_renderer.hpp  augmentation_view.cpp  augmentation_view.hpp  augmentation_widget.cpp  augmentation_widget.hpp  model_loader.cpp  model_loader.hpp
source/augmentation_widget/shaders/: GL_shaders.qrc  background_fs.glsl  object_fs.glsl
source/movement3d/: CMakeLists.txt  movement3d.cpp  movement3d.hpp  movement3d_filter.cpp  movement3d_filter.hpp
source/operators/: CMakeLists.txt  operators.cpp  operators.hpp
source/qml/: Main.qml  MainView.qml  Settings.qml  SettingsView.qml  main.qml  qml.qrc
source/shared/: CMakeLists.txt  frame_data.hpp  framedata.hpp
source/shared/movement3d/: movement3d.cpp  movement3d_filter.cpp  movement3d_filter.hpp
source/vision/: CMakeLists.txt  acquisition.cpp  acquisition.hpp  vision.cpp  vision.hpp
source/vision/acquisition/: CMakeLists.txt  acquisition_interface.hpp  camera_list_interface.hpp  qt5_camera_list.cpp  qt5_camera_list.hpp  video_sink_acquisition.cpp  video_sink_acquisition.hpp  video_surface_acquisition.cpp  video_surface_acquisition.hpp
source/vision/algorithms/: CMakeLists.txt  algorithm_gpu.cpp  algorithm_gpu.hpp  algorithm_original.cpp  algorithm_original.hpp  algorithm_random.cpp  algorithm_random.hpp  vision_algorithm.cpp  vision_algorithm.hpp
source/vision/algorithms/algorithm_gpu/: CMakeLists.txt  algorithm_gpu.cpp  algorithm_gpu.hpp
source/vision/algorithms/algorithm_gpu/shaders/: background_fs.glsl  passthrough_vs.glsl  segment_fs.glsl  vision_gpu_shaders.qrc
source/vision/algorithms/brute/: CMakeLists.txt  algorithm_brute.cpp  algorithm_brute.hpp
source/vision/algorithms/brute/shaders/: vision_brute_shaders.qrc
source/vision/algorithms/gpu/: CMakeLists.txt  algorithm_gpu.cpp  algorithm_gpu.hpp
source/vision/algorithms/original/: CMakeLists.txt  algorithm_original.cpp  algorithm_original.hpp
source/vision/algorithms/random/: CMakeLists.txt  algorithm_random.cpp  algorithm_random.hpp
source/vision/algorithms/shared/: CMakeLists.txt  algorithm_interface.hpp  classification.cpp  classification.hpp  frame_helper.cpp  operators.cpp  operators.hpp  point.hpp
source/vision/algorithms/utils/: frame_helper.cpp  frame_helper.hpp  image.hpp  operators.cpp
source/vision/algorithms/utils/frame_helper/: CMakeLists.txt  frame_helper_interface.hpp  qt5_frame_helper.cpp  qt6_frame_helper.cpp  qt6_frame_helper.hpp
src/: acquisition.cpp  algorithm_original.cpp  algorithm_random.cpp  augmentation_widget.cpp  main.cpp  model_loader.cpp  movement3d.cpp  operators.cpp  vision.cpp  vision_algorithm.cpp  window.cpp
tests/: CMakeLists.txt
tests/augmentation/: AugmentationTest.qml  CMakeLists.txt  augmentation_test.qrc  main.cpp  mock_algorithm.cpp  mock_algorithm.hpp  window.cpp  window.h  window.hpp  window.ui
tests/classification/: CMakeLists.txt  demo.cpp  test.cpp
tests/movement3d/: CMakeLists.txt  test.cpp
tests/movement3d_filter/: CMakeLists.txt  test.cpp
tests/operators/: CMakeLists.txt  demo.cpp  test.cpp
tests/vision/: AugmentationPopout.qml  CMakeLists.txt  VisionTest.qml  frame_data_lister.cpp  frame_data_lister.hpp  main.cpp  vision_test.qrc
