set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DQT_QML_DEBUG ")
add_compile_options(-Wall -Wextra -Wpedantic)

add_subdirectory(movement3d)
add_subdirectory(movement3d_filter)
add_subdirectory(classification)
add_subdirectory(augmentation)
